Updated MySQL Node to get schema data

--- a/storage/mysql/locales/en-US/68-mysql.json
+++ b/storage/mysql/locales/en-US/68-mysql.json
@@ -7,7 +7,8 @@
             "password": "Password",
             "database": "Database",
             "timezone": "Timezone",
-            "charset": "Charset"
+            "charset": "Charset",
+            "accessSchema": "Access Schema"
         },
         "status": {
             "badping": "Bad Ping",
