--- a/storage/postgresql/locales/ja/postgres.json
+++ b/storage/postgresql/locales/ja/postgres.json
@@ -1,5 +1,5 @@
 {
-    "mysql": {
+    "postgresql": {
         "label": {
             "host": "ホスト",
             "port": "ポート",
@@ -18,7 +18,7 @@
         "errors": {
             "notstring": "クエリが文字列として定義されていません",
             "notconnected": "データベースに接続できません",
-            "notconfigured": "MySQLデータベース未設定"
+            "notconfigured": "PostgreSQLデータベース未設定"
         }
     }
 }
